crates/toml/tests/snapshots/invalid/float/exp-point-3.stderr
TOML parse error at line 1, column 17
  |
1 | exp-point-3 = 3.e+20
  |                 ^
invalid fraction, expected digits
